Update - File names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alpinejs-desktop-notifications",
+  "name": "alpinejs-desktop-notify",
   "version": "1.0.0",
   "description": "Create desktop notifications with Alpine JS 📣",
   "keywords": [
